--- a/VIS3_app/templates/form.html
+++ b/VIS3_app/templates/form.html
@@ -81,7 +81,7 @@
                     <div style='margin-right:100px;'></div>
 
                     <div>
-                        <form id="searchingCardForm" action="{{ url_for('.returnLinks') }}">
+                        <form id="searchingCardForm" action="{{ url_for('.returnLinks') }}" method="POST">
                             <input type="hidden" name="res" id="searchingCardField" />
                             <table id="tableID" width="400" border="1"> 
                                 <tr> 
