Forse funziona, ora fa tutto il giro

--- a/VIS3_app/templates/results.html
+++ b/VIS3_app/templates/results.html
@@ -11,21 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="static/assets/css/smoothproducts.css">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-    <script>
-        function printSticazzi(){
-            console.log("{{ res }} ");
-        }
-        window.onload = function(){
-            //
-        }
-        $(document).ready( function () {
-            //SomeFunction();
-        });
-        document.addEventListener("DOMContentLoaded", function() {
-            //
-            printSticazzi();
-        });
-    </script>
+    <!--<script>
+        var res = "{{ res }}";
+    </script>-->
 </head>
 
 <body>
