--- a/VIS3_app/templates/searchingCard.html
+++ b/VIS3_app/templates/searchingCard.html
@@ -9,46 +9,81 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/smoothproducts.css">
+    <link rel="stylesheet" href="static/assets/css/bootstrap.min.css">
 </head>
 
 <body>
+
+    <script>
+        function uploadFunction(){
+            document.getElementById("labelFile").innerHTML = document.getElementById("myFile").value;
+        }
+    </script>
+
     <main class="page landing-page">
+        <div style='margin-top:10px;'></div>
+        <nav class="navbar navbar-toggleable-md bg-faded navbar-light bg-light">
+            <a class="navbar-brand" style="margin: auto;">Navbar</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+            
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" href="http://127.0.0.1:5000/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="{{ url_for('.form')}}">Form</a>
+                <a class="nav-item nav-link active" href="{{ url_for('.searchingCard')}}">Searching Card</a>
+                <!--<a class="nav-item nav-link" href="#">About</a>-->
+              </div>
+            </div>
+          </nav>
+
         <section class="clean-block features" style ="border-color: rgb(201,190,201);">
             <div class="container">
-                    <div class="carousel-inner" role="listbox" margin-right="auto" margin-left="auto">
-                        <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" height="300" width="800" src="static/scenery/VIS3.png"/></div>
+                <div class="carousel-inner" role="listbox" margin-right="auto" margin-left="auto">
+                    <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" height="300" width="800" src="static/scenery/VIS3.png"/></div>
+                </div>  
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-md-5 feature-box card bg-light mb-3 card border-danger mb-3">
+                    <div class="card-header"><i id = uploadIconTitle class="icon-folder-alt icon text-danger"> Import Searching Card</i></div>
+                    <div class="card-body">
+                        <p class="card-text">Click the button below to upload the searching card.<br>As a result of the uploading of the searching card, some links will be shown to view the analysis results graphically.</p>    
+                        <form action = "{{ url_for('.returnLinks') }}" method = "POST" enctype = "multipart/form-data">
+                            <div class="form-group">
+                                <div class="input-group mb-3">
+                                <div class="custom-file">
+                                    <input type="file" id="myFile" name="searchingCard" class="custom-file-input" onchange="uploadFunction()">
+                                    <label id="labelFile" class="custom-file-label">Choose file</label>
+                                </div>
+                                <div class="input-group-append">
+                                    <buttontype="button" id="returnLinksButton" class="btn btn-danger">Upload</button>
+                                </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
+                </div>
 
-                    <div style='margin-top:50px;'></div>
-                
-                    <div class="row justify-content-center">
-                        <div class="col-md-5 feature-box"><i id = uploadIconTitle class="icon-folder-alt icon"> Import Searching Card</i>
-                            <p>Click the button below to upload the searching card.<br>As a result of the uploading of the searching card, some links will be shown to view the analysis results graphically.</p>    
-                            <form action = "{{ url_for('.returnLinks') }}" method = "POST" enctype = "multipart/form-data">
-                                <input type="file" id="myFile" name="searchingCard" onchange="myFunction()" />
-                                <input id="returnLinksButton" type="submit"  class="button button4" />
-                            </form>
-                        
-                        </div>
+                <div style='margin-right:80px;'></div>
 
-                        <div style='margin-right:100px;'></div>
-    
-                        <div class="col-md-5 feature-box"><i id = downloadIconTitle class="icon-arrow-down-circle icon"> Searching Card sample</i>
-                            <p>Click the button below to download a sample of a searching card.</p>
-                            <a href="{{ url_for('.downloadFunction') }}" download> 
-                                <button id="submitButton" type="button" class="button button4">DOWNLOAD</button>
-                            </a> 
-                            <p></p>
-                            <p>If you want to create a your own searching card be carefull, it must have the green fields in the image: package and version.<br>A correct example of a searching card is the following.</p>
-                            <img class="card-img-top w-100 d-block" src="static/scenery/searching_card.png"/>
-                        </div>
+                <div class="col-md-5 feature-box card bg-light mb-3 card border-success mb-3">
+                    <div class="card-header"><i id = downloadIconTitle class="icon-arrow-down-circle icon text-success"> Searching Card sample</i></div>
+                    <div class="card-body">
+                        <p class="card-text">Click the button below to download a sample of a searching card.</p>
+                        <a href="{{ url_for('.downloadFunction') }}" download> 
+                            <button id="submitButton" type="button" class="btn btn-success">DOWNLOAD</button>
+                        </a> 
+                        <p></p>
+                        <p class="card-text">If you want to create a your own searching card be carefull, it must have the green fields in the image: package and version.<br>A correct example of a searching card is the following.</p>
+                        <img class="card-img-top w-100 d-block" src="static/scenery/searching_card.png"/>
                     </div>
                 </div>
             </div>
         </section>
         
-        <div style='margin-top:100px;'></div>
+        <div style='margin-top:50px;'></div>
 
         <!--
         <section>
@@ -66,8 +101,6 @@
         </section>
         -->
 
-        <div style='margin-top:50px;'></div>
-
     </main>
     <footer class="page-footer dark">
         <div class="footer-copyright">
@@ -80,8 +113,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
-    <script src="assets/js/smoothproducts.min.js"></script>
-    <script src="assets/js/theme.js"></script>
+    <script src="static/assets/js/smoothproducts.min.js"></script>
+    <script src="static/assets/js/theme.js"></script>
 </body>
 
 <style>
@@ -124,6 +157,10 @@
             width: 20%;
             float: left;
         }
+    }
+    .navbar-nav .nav-link,
+    .navbar-brand {
+        text-align: right;
     }
 </style>
 
