Aggiunti miei stili

--- a/VIS3_app/templates/form.html
+++ b/VIS3_app/templates/form.html
@@ -82,7 +82,7 @@
                 <div class="jumbotron card border-info mb-3">
                     <div class="row justify-content-center">
                         <div class="col-md-5 feature-box">
-                            <form action="/action_page.php">
+                            <form action="#">
                                 <input id="PackageInput" type="text" name="inputBox" placeholder="Package"><br>
                                 <input id="VersionInput" type="text" name="inputBox" placeholder="Version"><br>
                                 <input id="SoftwareInput" type="text" name="inputBox" placeholder="Software Type"><br>
