--- a/VIS3_app/templates/nhome.html
+++ b/VIS3_app/templates/nhome.html
@@ -82,9 +82,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('.searchingCard')}}">Searching card</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('.aboutUs') }}">About us</a>
-                </li>
               </ul>
             </div>
         </nav>
@@ -94,7 +91,7 @@
         <section class="clean-block features" style ="margin-bottom: 3em;">
             <div class="container">
                 <div class="carousel-inner" role="listbox" margin-right="auto" margin-left="auto">
-                    <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" height="300" width="800" src="static/scenery/VIS3.png"/></div>
+                    <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" max-height="300" max-width="800" src="static/scenery/VIS3_alt.png"/></div>
                 </div>
 
                 <div class="row justify-content-center jumbotron card border-secondary mb-3" style="padding: 2rem; border-radius: 0.5rem;">
