--- a/VIS3_app/templates/nresults.html
+++ b/VIS3_app/templates/nresults.html
@@ -61,6 +61,12 @@
         .navbar-brand {
             text-align: right;
         }
+        a {
+            color: #007bff;
+        }
+        li{
+            margin-top: 0.5em;
+        }
 
     </style>
     <script>
@@ -125,9 +131,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('.searchingCard')}}">Searching card</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('.aboutUs') }}">About us</a>
-                </li>
               </ul>
             </div>
         </nav>
@@ -136,50 +139,53 @@
         <section class="clean-block features" style ="border-color: rgb(201,190,201);">
             <div class="container">
                 <div class="carousel-inner" role="listbox" margin-right="auto" margin-left="auto">
-                    <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" height="300" width="800" src="static/scenery/VIS3.png"/></div>
-                </div>  
-            </div>
-
-            <div class="row justify-content-center">
-                <div class="col-md-5 feature-box card bg-light border-primary mb-3">
-                    <div class="card-header"><i id = uploadIconTitle class="icon-folder-alt icon text-primary"> Import Searching Card</i></div>
-                    <div class="card-body">
-                        <p class="card-text">Click the button below to upload the searching card.<br>As a result of the uploading of the searching card, some links will be shown to view the analysis results graphically.</p>    
-                        <form action = "{{ url_for('.returnLinks') }}" method = "POST" enctype = "multipart/form-data">
-                            <div class="form-group">
-                                <div class="input-group mb-3">
-                                <div class="custom-file">
-                                    <input type="file" id="myFile" name="searchingCard" class="custom-file-input" onchange="uploadFunction()">
-                                    <label id="labelFile" class="custom-file-label">Choose file</label>
-                                </div>
-                                <div class="input-group-append">
-                                    <buttontype="button" id="returnLinksButton" class="btn btn-primary">Upload</button>
-                                </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+                    <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" max-height="300" max-width="800" src="static/scenery/VIS3_alt.png"/></div>
                 </div>
+                <!--
+                <div class="row justify-content-center ">
+                <div class="jumbotron card border-secondary mb-3" style="padding: 2rem; border-radius: 0.5rem;">
+                    <p> Di seguito sono riportati i risultati della ricerca.&emsp;
+                        <ul>
+                            <li>DASHBOARDS:</li>
+                                &emsp;<a href="{{ summaryDashboardLink }}" style="color: #007bff;"> Vulnerability Summary Dashboard</a><br>
+                                &emsp;<a href="{{ vulnerabilityReportLink }}" style="color: #007bff;"> Vulnerability Technical Description Dashboard</a><br>
+                                &emsp;<a href="{{ exploitViewLink }}" style="color: #007bff;"> Exploit View Dashboard</a><br>
+                            <br>
+                            <li>CSV:</li>
+                                &emsp;<i class="fas fa-file-csv"  style="font-size:24px;color:mediumseagreen"></i><a href="{{ url_for('.exportCSV') }}?csv_name={{ csvLink }}" style="color: #007bff;">Export to CSV</a>
+                        </ul>
+                    </p> 
+                </div>
+                </div> -->
+                <div class="jumbotron card border-primary">
+                    <div class="row" style="margin-left: 1em; margin-bottom: 1em;">
+                        <p class="lead">Di seguito i risultati della ricerca:</p>
+                    </div>
 
-                <div style='margin-right:80px;'></div>
-
-                <div class="col-md-5 feature-box card bg-light border-info mb-3">
-                    <div class="card-header"><i id = downloadIconTitle class="icon-arrow-down-circle icon text-info"> Searching Card sample</i></div>
-                    <div class="card-body">
-                        <p class="card-text">Click the button below to download a sample of a searching card.</p>
-                        <a href="{{ url_for('.downloadFunction') }}" download> 
-                            <button id="submitButton" type="button" class="btn btn-info">DOWNLOAD</button>
-                        </a> 
-                        <p></p>
-                        <p class="card-text">If you want to create a your own searching card be carefull, it must have the green fields in the image: package and version.<br>A correct example of a searching card is the following.</p>
-                        <img class="card-img-top w-100 d-block" src="static/scenery/searching_card.png"/>
+                    <div class="row justify-content-center">
+                        
+                        <div class="col-5 feature-box">
+                            DASHBOARDS
+                            <ul>
+                                <li><img src="static/scenery/kibana.png" height="22px"/><a href="{{ summaryDashboardLink }}" > Vulnerability Summary Dashboard</a></li>
+                                <li><img src="static/scenery/kibana.png" height="22px"/><a href="{{ vulnerabilityReportLink }}" > Vulnerability Technical Description Dashboard</a></li>
+                                <li><img src="static/scenery/kibana.png" height="22px"/><a href="{{ exploitViewLink }}"> Exploit View Dashboard</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-1"></div>
+                        <div class="col-5 feature-box">
+                            EXPORTS
+                            <ul>
+                                <li><i class="fas fa-file-csv"  style="font-size:24px;color:mediumseagreen; margin-right: 0.25em;"></i><a href="{{ url_for('.exportCSV') }}?csv_name={{ csvLink }}" style="color: #007bff;">Export to CSV</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
     <footer class="page-footer dark" style="flex-shrink:0;">
-        <div class="footer-copyright" style="margin-top: 20px;">
+        <div class="footer-copyright">
             <p footer-text align="middle">Copyright © 2020 CyberHackademy. All rights reserved.</p>
         </div>
     </footer>
