--- a/VIS3_app/templates/nsearchingCard.html
+++ b/VIS3_app/templates/nsearchingCard.html
@@ -122,38 +122,68 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('.form')}}">Form</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('.searchingCard')}}">Searching card</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('.aboutUs') }}">About us</a>
+                <li class="nav-item active">
+                  <a class="nav-link" href="{{ url_for('.searchingCard')}}">Searching card <span class="sr-only">(current)</span></a>
                 </li>
               </ul>
             </div>
         </nav>
     </header>
-    <main class="page landing-page">
+    <main class="page landing-page" style="flex: 1 0 auto;">
         <section class="clean-block features" style ="border-color: rgb(201,190,201);">
             <div class="container">
                 <div class="carousel-inner" role="listbox" margin-right="auto" margin-left="auto">
-                    <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" height="300" width="800" src="static/scenery/VIS3.png"/></div>
-                </div>
-                
-                <div style='margin-top:50px;'></div>
+                    <div id="title" class="carousel-item active"><img class="card-img-top w-100 d-block" max-height="300" max-width="800" src="static/scenery/VIS3_alt.png"/></div>
+                </div>  
+            </div>
 
-                <div>
-                    <p> Di seguito sono riportati i risultati della ricerca.&emsp;<ul><li>DASHBOARDS:</li>&emsp;<a href="{{ summaryDashboardLink }}"> Vulnerability Summary Dashboard </a> <br> 
-                        &emsp;<a href="{{ vulnerabilityReportLink }}"> Vulnerability Technical Description Dashboard </a> <br>  &emsp;<a href="{{ exploitViewLink }}"> Exploit View Dashboard </a><br><br><li>CSV:</li>&emsp;<i class="fas fa-file-csv"  style="font-size:24px;color:mediumseagreen"></i><a href="{{ url_for('.exportCSV') }}?csv_name={{ csvLink }}"> Export to CSV</a></ul><br>
-                    </p> 
+            <div class="row justify-content-center">
+                <div class="col-md-5 feature-box card bg-light border-info mb-3">
+                    <div class="card-header"><i id = uploadIconTitle class="icon-folder-alt icon text-info"> Import Searching Card</i></div>
+                    <div class="card-body">
+                        <p class="card-text">Click the button below to upload the searching card.<br>As a result of the uploading of the searching card, some links will be shown to view the analysis results graphically.</p>    
+                        <form action = "{{ url_for('.returnLinks') }}" method = "POST" enctype = "multipart/form-data">
+                            <div class="form-group">
+                                <div class="input-group mb-3">
+                                <div class="custom-file">
+                                    <input type="file" id="myFile" name="searchingCard" class="custom-file-input" onchange="uploadFunction()">
+                                    <label id="labelFile" class="custom-file-label">Choose file</label>
+                                </div>
+                                <div class="input-group-append">
+                                    <buttontype="button" id="returnLinksButton" class="btn btn-info">Upload</button>
+                                </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                
+
+                <div style='margin-right:80px;'></div>
+
+                <div class="col-md-5 feature-box card bg-light border-primary mb-3">
+                    <div class="card-header"><i id = downloadIconTitle class="icon-arrow-down-circle icon text-primary"> Searching Card sample</i></div>
+                    <div class="card-body">
+                        <p class="card-text">Click the button below to download a sample of a searching card.</p>
+                        <a href="{{ url_for('.downloadFunction') }}" download> 
+                            <button id="submitButton" type="button" class="btn btn-primary">DOWNLOAD</button>
+                        </a> 
+                        <p></p>
+                        <p class="card-text">If you want to create your own searching card be carefull, you must specify at least the green fields in the image: package and version.<br>A correct example of a searching card is the following.</p>
+                        <img class="card-img-top w-100 d-block" src="static/scenery/searching_card.png"/>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
     <footer class="page-footer dark" style="flex-shrink:0;">
-        <div class="footer-copyright">
+        <div class="footer-copyright" style="margin-top: 20px; height: 50px;">
+            
             <p footer-text align="middle">Copyright © 2020 CyberHackademy. All rights reserved.</p>
+            
         </div>
+        
+            
+        
     </footer>
 </body>
 </html>
