--- a/VIS3_app/templates/nhome.html
+++ b/VIS3_app/templates/nhome.html
@@ -95,13 +95,13 @@
                 </div>
 
                 <div class="row justify-content-center jumbotron card border-secondary mb-3" style="padding: 2rem; border-radius: 0.5rem;">
-                    <p style="margin: 0px;"> VIS3 è un tool che raccoglie informazioni da piattaforme di pubblico accesso (NVD, CVE Details, Exploit DB) con il fine di aggregare vulnerabilità note e fornire enrichment legati ad esse. <br><br>
-                        Le informazioni possono essere ricercate attraverso:<br>
-                        &emsp;- il completamento manuale di alcuni parametri di una form HTML<br> 
-                        &emsp;- l'inserimento di una searching card<br><br>
-                        Come risultato della ricerca in entrambi i casi si otterranno i seguenti 3 file: un PDF, un CSV, un XLS.<!-- da correggere e togliere XLS ed eventualmente PDF --><br>  
-                        Per ognuno di questi è prevista la funzionalità di export.<br> 
-                        VIS3 può essere anche utilizzato da linea di comando, mostrando come risultato una cli minimal ed efficace.</p>
+                    <p style="margin: 0px;"> VIS3 is a tool used to harvest OSINT (NVD, CVE Details, Exploit DB) aimed to aggregate informations about known vulnerabilities.<br><br>
+                        Those informations can be exctracted by:<br>
+                        &emsp;- manually filling a form<br> 
+                        &emsp;- uploading a searching card<br><br>
+                        As a result, in both cases can be obtained three dashboards hosted on Kibana, describing respectivelly the vulnerabilities found, their description and informations related to the avaliable exploits.
+                        Moreover, it is possible to export those kinds of data as a unified CSV so that they can be easily managed and reviewed.<br> 
+                        VIS3 can be also used from the CLI, showing the results in a minimal and effective TUI.</p>
                 </div>
 
                 <div style='margin-top:20px;'></div>
