Aggiunto bg-image

--- a/VIS3_app/templates/nform.html
+++ b/VIS3_app/templates/nform.html
@@ -16,6 +16,10 @@
     <script src="static/assets/js/theme.js"></script>
 
     <style>
+        body{
+            background-image: linear-gradient(rgba(255,255,255,.85), rgba(255,255,255,.85)), url('static/scenery/bg.jpeg');
+            background-size: cover;
+        }
         .button4{
             border-radius: 8px;
         }
